# elayra-research

./: .env.example  .gitignore  Makefile  README.md  REPO_MAP.md  RUNBOOK.md  STATE_OF_EVIDENCE.md  TEST_COVERAGE.md  bert_comparison.py  bert_variants.py  broader_analysis_pipeline.py  broader_analysis_results.json  expanded_model_init_results.json  extended_control_500steps.json  extended_control_experiment.py  extended_control_longer_runs.py  extended_control_results.json  initialization_analysis.py  layer_comparison.py  layerwise_model_comparison.json  layerwise_model_comparison.py  multi_model_init_analysis.py  pyproject.toml  pyvenv.cfg  requirements-lock.txt  review.txt  run_all.ps1  run_extend.ps1  run_runbook.ps1  shuffled_control_experiment.py  step1.py  step2.py  step3.py  untrained_vs_pretrained.py
ela/: __init__.py  analysis.py  bootstrap.py  config.py  distributions.py  utils.py  viz.py
hidden_results/: README.md
results/: bootstrap_results.json  broader_analysis_results.json  checkpoint_analysis.json  expanded_model_init_results.json  extended_control_500steps.json  extended_control_results.json  head_level_results.json  l1_regularization_results.json  layerwise_fulltensor.json  layerwise_main.json  layerwise_model_comparison.json  layerwise_seed99.json  mlp_analysis_results.json  mlp_embedding_4way.json  modern_llm_results.json  reconciliation_table.md  shuffled_control_results.json
scripts/: bootstrap_analysis.py  checkpoint_analysis.py  control_long.py  control_short.py  control_shuffled.py  generate_figures.py  head_level_analysis.py  init_analysis.py  l1_regularization_test.py  mlp_analysis.py  mlp_embedding_analysis.py  modern_llms_ext.py  reconcile_claims.py  run_layerwise.py  run_layerwise_incremental.py  run_layerwise_modern.py  run_pipeline.py
tests/: test_analysis_core.py  test_ela_extended.py
